--- a/Big-Head-Console/views/dashboard.pug
+++ b/Big-Head-Console/views/dashboard.pug
@@ -2,11 +2,10 @@ doctype html
 head
     meta(http-equiv='Content-Type' content='text/html; charset=utf-8')
 
-    title Big-Head UI - Dashboard
+    title Portal de Transparencia del Poder Ejecutivo del Estado de Hidalgo - Dashboard
     meta(name='viewport' content='width=device-width, initial-scale=1, shrink-to-fit=no')
-    meta(name='title' content='Big-Head UI - Dashboard')
-    meta(name='author' content='Angel Erick Cruz')
-    link(rel='canonical' href='https://leganux.com')
+    meta(name='title' content='Portal de Transparencia del Poder Ejecutivo del Estado de Hidalgo - Dashboard')
+    meta(name='author' content='Espinosa Rodriguez Jasson Antonio')
     each val in Assets.css
         link(type='text/css' href=val rel='stylesheet')
 
@@ -22,7 +21,7 @@ body
     .container-fluid
         .row
             .col-12
-                .card.bg-primary.shadow-soft.border-light
+                .card.bg-primary.shadow-soft.border-light.border-light
                     .card-header.border-light
                         h3 Dashboard
                     .card-body.border-light
@@ -88,9 +87,7 @@ body
                     .card-footer.border-light
 
                         center
-                            img.img-fluid(src="https://leganux.net/web/wp-content/uploads/2020/01/circullogo.png" width="50px")
-                            | &copy; 2021 -2022
-                            a(href="https://leganux.net")  Leganux
+                            | &copy; 2022 Jasson
                             | All Rigths reserved
 
 
