--- a/Big-Head-Console/views/page.pug
+++ b/Big-Head-Console/views/page.pug
@@ -2,11 +2,10 @@ doctype html
 head
     meta(http-equiv='Content-Type' content='text/html; charset=utf-8')
 
-    title Big-Head UI - !{pagename}
+    title Portal de Transparencia del Poder Ejecutivo del Estado de Hidalgo - !{pagename}
     meta(name='viewport' content='width=device-width, initial-scale=1, shrink-to-fit=no')
-    meta(name='title' content='Big-Head UI - ' + pagename)
-    meta(name='author' content='Angel Erick Cruz')
-    link(rel='canonical' href='https://leganux.com')
+    meta(name='title' content='Portal de Transparencia del Poder Ejecutivo del Estado de Hidalgo - ' + pagename)
+    meta(name='author' content='Espinosa Rodriguez Jasson Antonio')
     each val in Assets.css
         link(type='text/css' href=val rel='stylesheet')
 
@@ -45,9 +44,8 @@ body
                     .card-footer.border-light
 
                         center
-                            img.img-fluid(src="https://leganux.net/web/wp-content/uploads/2020/01/circullogo.png" width="50px")
-                            | &copy; 2021 -2022
-                            a(href="https://leganux.net")  Leganux
+                            | &copy; 2022
+                            a(href="https://leganux.net")  Jasson
                             | All Rigths reserved
     include template/modal
 
@@ -66,3 +64,4 @@ script.
 
 
 
+|
