--- a/Big-Head-Console/views/template/modal.pug
+++ b/Big-Head-Console/views/template/modal.pug
@@ -3,7 +3,7 @@
         .modal-content
             // Modal Header
             .modal-header
-                h4.modal-title New / Edit !{pagename}
+                h4.modal-title Nuevo / Editar !{pagename}
                 button.close(type='button' data-dismiss='modal') &times;
             // Modal body
             .modal-body
@@ -33,5 +33,5 @@
 
             // Modal footer
             .modal-footer
-                button.btn.btn-primary.text-success#save Save
-                button.btn.btn-primary.text-danger(type='button' data-dismiss='modal') Close
+                button.btn.btn-primary.text-success#save Guardar
+                button.btn.btn-primary.text-danger(type='button' data-dismiss='modal') Cerrar
